--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<label class="label-email" for="email">Электронная почта</label>
 								<input class="login-pas" id="password-label" type="password" name="password">
 								<label class="label-password" for="password-label">Пароль</label>
-								<div class="login-buttons">
+								<div class="login-buttons clearfix">
 									<input class="login-button-enter" type="submit" name="enter" value="ВОЙТИ">
 									<div class="login-check">
 										<a href="#">Забыли пароль?</a>
@@ -139,7 +139,7 @@
 								<a class="quick-view" href="#" target="_blank">Быстрый просмотр</a>
 							</div>
 						</article>
-						<article class="catalog-item">
+						<article class="catalog-item margin-none">
 							<div class="hit">
 							</div>
 							<img src="img/creme-brulee.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
