--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
 							<li class="first-menu one-units active"><a class="menu-link">Каталог</a>
 								<ul class="sub-menu">
 									<li><a href="#">Новинки</a></li>
-									<li><a>Сливочное</a></li>
+									<li class="sub-menu-active"><a>Сливочное</a></li>
 									<li><a href="#">Щербеты</a></li>
 									<li><a href="#">Фруктовый лед</a></li>
 									<li><a href="#">Мелорин</a></li>
@@ -28,65 +28,41 @@
 						</ul>
 					</nav>
 					<div class="second-block">
-						<div class="user-block">
-							<div class="search-wrapper">
-								<a href="#" class="users user-search">Поиск</a>
-								<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-									<input class="enter-search" id="what-look" type="search" >
-									<label class="write-search" for="what-look">Что ищем?</label>
-								</form>
-							</div>	
-							<div class="login-wrapper">
-								<a class="users login" href="#">Вход</a>
-								<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
-									<input class="login-email" id="email" type="email" name="email">
-									<label class="label-email" for="email">Электронная почта</label>
-									<input class="login-pas" id="password-label" type="password" name="password">
-									<label class="label-password" for="password-label">Пароль</label>
-									<div class="login-butons">
-										<input type="submit" name="enter" value="ВОЙТИ">
-										<div class="login-check">
-											<a href="#">Забыли пароль?</a>
-											<a href="#">Новая регистрация</a>
-										</div>
+						<div class="second-block">
+					<div class="user-block">
+						<div class="search-wrapper">
+							<a href="#" class="users user-search">Поиск</a>
+							<form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+								<input class="enter-search" id="what-look" type="search" >
+								<label class="write-search" for="what-look">Что ищем?</label>
+							</form>
+						</div>	
+						<div class="login-wrapper">
+							<a class="users login" href="#">Вход</a>
+							<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+								<input class="login-email" id="email" type="email" name="email">
+								<label class="label-email" for="email">Электронная почта</label>
+								<input class="login-pas" id="password-label" type="password" name="password">
+								<label class="label-password" for="password-label">Пароль</label>
+								<div class="login-buttons clearfix">
+									<input class="login-button-enter" type="submit" name="enter" value="ВОЙТИ">
+									<div class="login-check">
+										<a href="#">Забыли пароль?</a>
+										<a href="#">Новая регистрация</a>
 									</div>
-								</form>
-							</div>
-							<div class="basket-wrapper">
-								<a class="users basket basket-active" href="#">2 товара</a>
-								<div class="basket-of-goods">
-									<div class="table-goods">
-										<ul>
-											<li class="closed">
-												<div class="modal-content-close">
-												</div>
-											</li>
-											<li><img src="img/orange.jpg" width="35" height="35" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></li>
-											<li>Сливочное с апельсиновым джемом</li>
-											<li class="weight-price">1,5кг&#215;<span>200р.</span></li>
-											<li>300р.</li>
-										</ul>
-										<ul>
-											<li class="closed">
-												<div class="modal-content-close">
-												</div>
-											</li>
-											<li><img src="img/strawberry.jpg" width="35" height="35" alt="Сливочно-клубничное с присыпкой из белого шоколада"></li>
-											<li>Клубничный пломбир с присыпкой из белого шоколада</li>
-											<li class="weight-price">1,5кг&#215;<span>300р.</span></li>
-											<li>450р.</li>
-										</ul>
-									</div>
-									<span class="sum">Итого: 750р.</span><br>
-									<input class="submit-basket" type="submit" name="submit-basket" value="Оформить заказ">
-								</div>	
-							</div>
+								</div>
+							</form>
 						</div>
-						<div class="user-info">
-							<p>C 10 до 20, ежедневно</p>
-							<a href="tel:8812450-25-25">8 812 450-25-25</a>
+						<div class="basket-wrapper">
+							<a class="users basket" href="#">&#160;Пусто&#160;</a>
 						</div>	
 					</div>
+					<div class="user-info">
+						<p>C 10 до 20, ежедневно</p>
+						<a href="tel:8812450-25-25">8 812 450-25-25</a>
+					</div>	
+				</div>
+				</header>
 				</header>
 				<main class="elevator">
 					<div class="breadcrumbs">
@@ -185,8 +161,8 @@
 								</div>
 							</article>
 						</div>
-						<div class="fourth margin-none">		
-							<article class="catalog-item">
+						<div class="fourth">		
+							<article class="catalog-item  margin-none">
 								<img src="img/creme-brulee.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
 								<span class="price">415 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное крем-брюле с карамельной подливкой</span></a></p>
@@ -225,8 +201,8 @@
 								</div>
 							</article>
 						</div>
-						<div class="fourth margin-none">
-							<article class="catalog-item">
+						<div class="fourth ">
+							<article class="catalog-item margin-none">
 								<img src="img/chocolate.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
 								<span class="price">320 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное с шоколадной стружкой</span></a></p>
@@ -265,8 +241,8 @@
 								</div>
 							</article>
 						</div>
-						<div class="fourth margin-none">		
-							<article class="catalog-item">
+						<div class="fourth ">		
+							<article class="catalog-item margin-none">
 								<img src="img/mint.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
 								<span class="price">420 &#8381;/<span class="units">кг</span></span>
 								<p><a class="purchase-link" href="#"><span>Сливочное с мятным сиропом</span></a></p>
